# openwhisk-client-rust

./: Cargo.toml  readme.md
src/: lib.rs
src/api/: action.rs  common.rs  mod.rs  namespace.rs  rule.rs  traits.rs  trigger.rs
src/client/: common.rs  mod.rs  native_client.rs  openwhisk_client.rs  wasm_client.rs  wasmtime_client.rs
tests/: helper.rs  test_actions.rs  test_namespace.rs  test_rules.rs  test_triggers.rs
