[package]
name = "openwhisk-rust"
version = "0.1.0"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/hugobyte/openwhisk-rust"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
chesterfield = "0.0.1"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls"] }
derive-new = "0.5.9"
wasi-experimental-http = "0.9.0"
wasmtime = "0.35.2"


[dependencies.harbourmaster]
version = "0.5.0"
optional = true

[dependencies.shiplift]
version = "0.7.0"
optional = true

[features]
mock_containers = ["shiplift", "harbourmaster"]

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros"] }
wiremock = "0.5"
envconfig = "0.10.0"