[package]
name = "openwhisk-rust"
version = "0.1.0"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/hugobyte/openwhisk-client-rust"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
chesterfield = "0.0.1"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls"] }
derive-new = "0.5.9"
http = "0.2.6"
base64 = "0.13.0"

