[package]
name = "openwhisk-rust"
version = "0.1.2"
authors = ["HugoByte <hello@hugobyte.com>"]
repository = "https://github.com/hugobyte/openwhisk-client-rust"
license = "Apache-2.0"
edition = "2018"
description = "A rust client for OpenWhisk"
documentation = "https://docs.rs/openwhisk-rust/0.1.1/openwhisk_rust/"
readme = "readme.md"

exclude = [
    "tests/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.137", features = ["derive"]}
serde_derive = "1.0.137"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls"] }
derive-new = "0.5.9"
http = "0.2.8"
base64 = "0.13.0"
wasi-experimental-http = "0.9.0"
bytes = "1"